Ensure the icons don't get cropped

--- a/NuGet.Docs/css/nuget.docs.css
+++ b/NuGet.Docs/css/nuget.docs.css
@@ -495,6 +495,8 @@ table.reference tr td:first-child {
     display: inline-block;
     background-position: 0 0;
     background-repeat: no-repeat;
+    height: 32px;
+    padding-top: 3px;
 }
 .icon.contribute {
     background-image: url("../images/contribute-nuget.png");
